--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,2 @@
 # Astro Runtime includes the following pre-installed providers packages: https://docs.astronomer.io/astro/runtime-image-architecture#provider-packages
+pycurl==7.45.2
